# hologram-audit-risk

./: .env.example  .gitattributes  .gitignore  .last_project  .mcp.json.bak  .mcp.json.example  AGENTS.md  BUGS.md  CLAUDE.md  CONTRIBUTING.md  CSS_MIGRATION.md  FRONTEND_AUDIT_CHECKLIST.md  FROZEN.md  GSAP_GUIDE.md  LICENSE  PROJECT.md  README.md  SECURITY-AUDIT-HANDOFF.md  SECURITY.md  TODO.md  V4_CONSTRUCTION_PLAN.md  clean.sh  hologram.constraints.yaml  hologram_graph.hologram  install.sh  pyproject.toml
.cargo/: config.toml
.githooks/: pre-commit
.hologram/: timeline.db
assets/: banner.html
dev-docs/: P1-4-native-commands.md  README.md  acceptance.md  architecture.md  auth-payment-live-verification.md  codex-handoff-2026-07.md  contracts.md  current-state-audit.md  domain-model.md  multi-agent-orchestration.md  personal-pro-auth-contract.md  phase4-manual-ui-checklist.md  phase4-productization.md  phase5-productization.md  product-charter.md  roadmap-2026.md  rule-taxonomy.md  self-healing-policy.md  session-A-P1-6-P1-5.md  session-B-P1-7.md  session-C-P3.md  session-D-P0-3.md  session-E-P2.md  session-F-AI-rules.md  ui-truth.md
docs/: README.md  auth-payment-live-samples.json  phase5-delivery.md  审计日志不可篡改性技术说明.md
engine/: Cargo.toml
scripts/: auth-payment-live-verification.sh  verify-local-cli-core.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: audit.rs  credential.rs  lib.rs  lsp_manager.rs  main.rs  mcp_manager.rs  pty_manager.rs  workspace.rs
src-ui/: index.html  package-lock.json  package.json  test-agent.ts  test-once.ts  (+2 more)
(+258 files in other folders)
