[package]
name = "hologram"
version = "0.1.0"
description = "全息观测站"
authors = ["Hologram Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [], default-features = false }

[dependencies]
tauri = { version = "2", features = ["wry"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
